# Terax-AI

./: .gitignore  README.md  TERAX.md  components.json  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/workflows/: android.yml  main.yml  release.yml
docs/: ANDROID.md
nix/: package.nix  sources.json
scripts/: init-android.sh
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/android-plugins/: README.md
src-tauri/android-plugins/app.crynta.terax/: BootstrapPlugin.kt  KeystorePlugin.kt
src-tauri/assets/android/: README.md  proot-aarch64
src-tauri/capabilities/: android.json  default.json
src-tauri/src/: lib.rs
src-tauri/src/modules/: discord.rs  mod.rs  secrets.rs  ssh.rs  workspace.rs
src-tauri/src/modules/fs/: tree.rs
src-tauri/src/modules/git/: commands.rs  operations.rs  process.rs
src-tauri/src/modules/pty/: android.rs  mod.rs  session.rs  shell_init.rs
src-tauri/src/modules/pty/scripts/: bashrc.bash  zlogin.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
src-tauri/src/modules/shell/: mod.rs
src/app/: App.tsx
src/components/ai-elements/: message.tsx  reasoning.tsx
src/lib/: androidBootstrap.ts
src/modules/ai/: config.ts  index.ts  logger.ts
src/modules/api-tester/: index.ts  types.ts
src/modules/discord/: index.ts  useDiscordPresence.ts
src/modules/editor/: AiDiffPane.tsx  EditorPane.tsx  EditorStack.tsx  index.ts
src/modules/explorer/: DirChildren.tsx  DotfilesGroupNode.tsx  ExplorerSearch.tsx  FileExplorer.tsx  FileTreeNode.tsx  InlineInput.tsx
src/modules/header/: Header.tsx  SearchInline.tsx
src/modules/preview/: PreviewPane.tsx
src/modules/settings/: openSettingsWindow.ts  store.ts
src/modules/shortcuts/: ShortcutsDialog.tsx  shortcuts.ts
src/modules/source-control/: useSourceControl.ts  useSourceControlPanel.ts
src/modules/statusbar/: CwdBreadcrumb.tsx  WorkspaceEnvSelector.tsx
src/modules/tabs/: TabBar.tsx  index.ts
src/modules/terminal/: PaneTreeView.tsx  TerminalPane.tsx  TerminalStack.tsx  index.ts  touch.ts
src/modules/theme/: ThemeProvider.tsx
src/modules/workspace/: env.ts
src/settings/: SettingsApp.tsx  main.tsx
src/settings/components/: ProviderIcon.tsx
src/settings/sections/: AboutSection.tsx  AgentsSection.tsx  AiSection.tsx  GeneralSection.tsx  ModelsSection.tsx
src/stores/: workspace.ts
src/styles/: globals.css  terminalTheme.test.ts  terminalTheme.ts
(+45 files in other folders)
