[package]
name = "terax"
version = "0.6.6"
description = "Terax — an open-source AI-native terminal emulator"
authors = ["crynta"]
edition = "2021"

[lib]
name = "terax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
log = "0.4"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
globset = "0.4"
shared_child = "1"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", default-features = false, features = [
	"rustls-tls",
	"stream",
] }
bytes = "1"
futures-util = "0.3"
tokio = { version = "1", default-features = false, features = ["rt"] }

# ── Desktop-only: PTY via portable-pty ────────────────────────────────────────
[target.'cfg(not(target_os = "android"))'.dependencies]
portable-pty = "0.9"

# ── Android-only: PTY via nix + proot ─────────────────────────────────────────
[target.'cfg(target_os = "android")'.dependencies]
nix = { version = "0.27", features = ["pty", "process", "fs", "signal", "term"] }

# ── Unix shared (desktop + android) ───────────────────────────────────────────
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# ── macOS keychain ─────────────────────────────────────────────────────────────
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", default-features = false, features = [
	"apple-native",
] }

# ── Windows keychain + job objects ─────────────────────────────────────────────
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", default-features = false, features = [
	"windows-native",
] }
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_JobObjects",
	"Win32_System_Threading",
] }

# ── Desktop-only plugins (no autostart/updater/window-state on mobile) ────────
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
